...

        startMultiTask(withURL: Config.step_03_multiTaskURL)

        hittablePlayButton.waitForThenTap()

        if !app.buttons["Close player"].exists {
            app.buttons["Player"].waitForThenTap()
        }

        snapshot("03_Player_With_MultiTask")

        // 03 - Teardown
        hittablePlayButton.waitForThenTap()
...
