...
            ThemedDivider()
            Text(L10n.selectedPodcastCount(pickerModel.selectedPodcastUuids.count, capitalized: true))
                .font(.subheadline)
                .textStyle(PrimaryText())
                .padding(.top, 3)
            ThemedDivider()
            List(pickerModel.filteredPodcasts) { podcast in
                Button {
                    pickerModel.togglePodcastSelected(podcast)
                } label: {
                    PodcastPickerRow(pickingForFolderUuid: $pickerModel.pickingForFolderUuid, podcast: podcast, selectedPodcasts: $pickerModel.selectedPodcastUuids)
                }
                .listRowInsets(EdgeInsets(top: 8, leading: 0, bottom: 8, trailing: 4))
...
